# Pitch-Sequence-Predictor

./: .gitignore  README.md  pyproject.toml
controller/: cli_arguments.py  config.py  controller.py  main.py
data/: hitters_2025_full.parquet  pitcher_allowed.json  pitchers_2025_full.parquet
data_collection/: context_collection.py  context_data_collection.py  fusion_collection.py  hitter_collection.py  hitter_preprocessing.py  pitch_seqeunce_collection.py  pitch_sequence_collection.py  pitcher_collection.py
data_preprocessing/: hitter_preprocessing.py
evaluation/: eval.py
model/: data_types.py  model_components.py  pitch_sequence_pipeline.py  pitch_sequence_pipeline_components.py  pitch_sequence_trainer_components.py  trainer_type.py
model/context_encoder/: context_encoder.py
model/custom_types/: data_types.py  pitch_sequence_pipeline_components.py  trainer_type.py
model/hitter_encoder/: hitter_encoder.py
model/pitch_sequence_encoder/: pitch_sequence_encoder.py
model/pitcher_encoder/: pitcher_encoder.py
model/training/: pitch_sequence_trainer.py
preprocessing/: batter_dataset.py  context_dataset.py  fusion_dataset.py  hitter_dataset.py  pitch_sequence_dataset.py  pitcher_dataset.py
utils/: constants.py  logger.py
