[project]
name = "pitch-sequence-predictor"
version = "0.1.0"
description = "Dependencies for project"
authors = [
    {name = "Matt",email = "matthodgess384@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "pybaseball (>=2.2.7,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "tables (>=3.10.2,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
